# pandantic

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  tests.py
.github/workflows/: pre-commit.yml  publish.yml  pytest.yml  tests.yml
docs/source/: api.rst  conf.py  index.rst  pandas_plugin.rst  usage.rst
examples/: titanic.csv  titanic.py
experiments/: small_dataset.py
notebooks/: medium_article_demo.ipynb
src/pandantic/: __init__.py  basemodel.py  types.py  types_pandantic.py
src/pandantic/plugins/: pandas.py  pandas_plugin.py
src/pandantic/validators/: __init__.py  base.py  baseclass.py  pandas.py
tests/: test_basemodel.py  test_custom_validator_context_str_list.py  test_custom_validator_even_int.py  test_custom_validator_global_list_str_list.py  test_implementations.py  test_optional_attr.py  test_pandas_plugin.py  test_pandas_validator.py
tests/benchmarks/: dunnhumpy_benchmark.py  pandera_benchmark.py  small_dataset.py  test_iterrows.py
tests/benchmarks/models/: dataframeschema.py  dunnhumby.py
