[tool.poetry]
name = "pandantic"
version = "0.1.2"
description = ""
authors = ["wessel.huising <wessel.huising@mollie.com>"]
readme = "README.md"

packages = [
    { include = "pandantic", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pydantic = "2.0a2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
pylint = "^2.17.2"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit-hooks = "^4.4.0"
safety = "^2.3.5"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
