[tool.poetry]
name = "pandantic"
version = "1.0.0"
description = "Gone are the days of black-box dataframes in otherwise type-safe code! Pandantic builds off the Pydantic API to enable validation and filtering of the usual dataframe types (i.e., pandas, etc.)"
authors = [
  "Wessel Huising <wessel@plattevorm.nl>",
  "Xavier Rojas Nogueira <xavier.rojas.nogueira@gmail.com>",
]
readme = "README.md"

packages = [{ include = "pandantic", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pydantic = "^2.0.0"
pandas-stubs = "^2.0.3.230814"
multiprocess = "^0.70.15"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
pylint = "^2.17.2"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit-hooks = "^4.4.0"
safety = "^2.3.5"
scikit-learn = "^1.2.2"
pandera = "^0.14.5"

[tool.isort]
profile = "black"
lines_after_imports = 2
group_by_package = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
